bin/kubernetes/demo/istio/flask.istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapp
  labels:
    app: flaskapp
spec:
  selector:
    app: flaskapp
  ports:
    - name: http
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-v1
spec:
  selector:
    matchLabels:
      app: flaskapp
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: flaskapp
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: flaskapp
          image: dustise/flaskapp
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-v2
spec:
  selector:
    matchLabels:
      app: flaskapp
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: flaskapp
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: flaskapp
          image: dustise/flaskapp
          imagePullPolicy: IfNotPresent
