bin/kubernetes/demo/istio/sleep.istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: sleep
  labels:
    app: sleep
spec:
  selector:
    app: sleep
  ports:
    - name: ssh
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep-v1
spec:
  selector:
    matchLabels:
      app: sleep
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: sleep
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: sleep
          image: dustise/sleep
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep-v2
spec:
  selector:
    matchLabels:
      app: sleep
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: sleep
        version: v2
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: sleep
          image: dustise/sleep
          imagePullPolicy: IfNotPresent
