bin/kubernetes/demo/istio/httpbin.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: httpbin.default.svc.cluster.local
      mirror:
        host: flaskapp.default.svc.cluster.local
        subset: v2
